# rust-market-data

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.githooks/: commit-msg  post-commit  pre-commit
backend/: Cargo.toml  README.md
backend/benches/: tick_benchmark.rs
backend/src/: chart.rs  cli.rs  constants.rs  tick.rs
backend/src/simulator/: gateway.rs  metrics.rs  mod.rs
backend/tests/: e2e_realtime.rs  gateway_throttle.rs  integration_simulator.rs
benches/: tick_benchmark.rs
frontend/: .gitignore  Cargo.toml  README.md  index.html  style.css
frontend/src/: lib.rs  logging.rs
frontend/src/components/: dashboard.rs  filters.rs  history_chart.rs  mod.rs  summary.rs  tick_table.rs
frontend/src/ticks/: format.rs  mod.rs  store.rs  types.rs  websocket.rs
schemas/: log.sample.json  log.schema.json  tick.sample.json  tick.schema.json  tick_batch.sample.json  tick_batch.schema.json
src/: cli.rs  constants.rs  lib.rs  logging.rs  main.rs  model.rs  tail.rs
src/simulator/: mod.rs  universe.rs
tests/: cli_smoke.rs  integration_simulator.rs
