[package]
name = "rust-market-data"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.32"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "net", "time", "io-util", "sync", "signal"] }
clap = { version = "4.5", features = ["derive"] }
textplots = "0.8"
rayon = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tick_benchmark"
harness = false
