[package]
name = "rust-market-data"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.32"
rand = "0.8"
rand_distr = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "net", "time", "io-util", "sync", "signal"] }
clap = { version = "4.5", features = ["derive"] }
textplots = "0.8"
rayon = "1.10"
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-tungstenite = "0.24"

[[bench]]
name = "tick_benchmark"
harness = false
