[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", default-features = false, features = ["csr"] }
leptos_meta = { version = "0.6", default-features = false, features = ["csr"] }
leptos_router = { version = "0.6", default-features = false, features = ["csr"] }
console_log = "1"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.5"
js-sys = "0.3"
gloo-net = { version = "0.4", features = ["websocket"] }
log = "0.4"
indexmap = "2"
futures = "0.3"

[features]
default = []
